# bit-manipulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: and_not.bmd  count_left_zeros.bmd  isolate_rightmost_one.bmd  reset_right_ones.bmd  reset_rightmost_one.bmd  set_rightmost_zero.bmd
src/: ansi.hpp  assert.cpp  assert.hpp  bms.hpp  bms_analyze.cpp  bms_fwd.hpp  bms_grammar.hpp  bms_operations.cpp  bms_operations.hpp  bms_parse.cpp  bms_tokenize.cpp  bms_tokens.hpp  bms_util.cpp  bms_value.hpp  bmscript.cpp  bmscript.hpp  config.hpp  diagnostics.cpp  diagnostics.hpp  io.cpp  io.hpp  lookup.cpp  main.cpp  parse.cpp  result.hpp  source_position.hpp  tokenize.cpp  visit.hpp
src/bmd/: bms_to_html.cpp  bms_to_html.hpp  code_language.hpp  code_span_type.hpp  code_string.hpp  codegen.cpp  codegen.hpp  directive_type.hpp  doc_to_html.cpp  doc_to_html.hpp  enums.cpp  fwd.hpp  grammar.hpp  html_writer.cpp  html_writer.hpp  parse.cpp  parse.hpp  scope_success_writer.hpp  tokens.hpp
src/bmd/codegen/: code_language.hpp  code_span_type.hpp  code_string.hpp  codegen.cpp  codegen.hpp  codegen_bms.cpp  codegen_bms_vm.cpp  codegen_c_cpp.cpp  declarations.cpp  declarations.hpp  generator_base.hpp  generator_error.hpp
src/bmd/html/: bms_to_html.cpp  bms_to_html.hpp  code_string_to_html.cpp  code_string_to_html.hpp  doc_to_html.cpp  doc_to_html.hpp  document_error.hpp  html_writer.cpp  html_writer.hpp  token_consumer.hpp  token_type.hpp
src/bmd/parsing/: ast.hpp  grammar.ebnf  grammar.hpp  parse.cpp  parse.hpp
src/bms/: 3ac.hpp  analysis_error.hpp  analysis_level.hpp  analyze.cpp  analyze.hpp  analyze_annotations.cpp  analyze_name_lookup.cpp  analyze_return.cpp  analyze_vm.cpp  analyzed_program.hpp  annotation.hpp  ast.cpp  ast.hpp  astp.hpp  basic_diagnostic_consumer.hpp  bms.hpp  builtin_function.hpp  comparison_failure.hpp  concrete_type.hpp  concrete_value.hpp  debug_info.hpp  deduction.hpp  diagnostic_consumer.hpp  execution_error.hpp  expression_type.hpp  fwd.hpp  grammar.hpp  instantiate.cpp  instantiate.hpp  linear_map_stack.hpp  lookup_result.hpp  operations.cpp  operations.hpp  parse.cpp  parse.hpp  parse_error.hpp  parse_number.cpp  parse_number.hpp  parsing.hpp  print.hpp  (+16 more)
src/bms/evaluation/: builtin_function.hpp  evaluation_error.hpp  operations.cpp  operations.hpp
src/bms/parsing/: astp.hpp  attribute.hpp  grammar.ebnf  grammar.hpp  parse.cpp  parse.hpp  parse_error.hpp
src/bms/tokenization/: token.hpp  token_type.hpp  tokenize.cpp  tokenize.hpp  tokenize_error.hpp
src/bms/vm/: codegen.cpp  codegen.hpp  execution_error.hpp  instructions.cpp  instructions.hpp  linear_map_stack.hpp  vm.cpp  vm.hpp
src/cli/: compile.cpp  compile.hpp  diagnostics.cpp  diagnostics.hpp  glue.cpp  glue.hpp  main.cpp
src/common/: ansi.hpp  assert.cpp  assert.hpp  code_span_type.hpp  code_string.hpp  config.hpp  diagnostics.cpp  diagnostics.hpp  function_ref.hpp  fwd.hpp  glue.cpp  glue.hpp  io.cpp  io.hpp  io_error.hpp  meta.hpp  packs.hpp  parse.cpp  parse.hpp  result.hpp  source_position.hpp  to_chars.cpp  to_chars.hpp  to_string.cpp  to_string.hpp  tribool.hpp  tty.cpp  tty.hpp  variant.hpp  visit.hpp
src/test/: compilation_stage.hpp  diagnostic_policy.hpp  document_file_testing.cpp  document_file_testing.hpp  main.cpp  program_file_testing.cpp  program_file_testing.hpp  test_analysis_error.cpp  test_codegen.cpp  test_codegen_c.cpp  test_declarations.cpp  test_dependency_breaking.cpp  test_parse_error.cpp  test_to_chars.cpp  test_to_string.cpp  test_tokenization.cpp  test_tokenize_error.cpp  test_tribool.cpp  test_valid_bmd.cpp  test_valid_bms.cpp  test_vm_codegen.cpp  variant.cpp
src/test/bmd/: document_file_testing.cpp  test_codegen.cpp  test_declarations.cpp  test_valid_bmd.cpp  (+1 more)
src/wasm/: bm.cpp  bm.hpp
src/web/: bm.cpp  bm.hpp
test/: assert.bms  consteval_return_conversion.bms  deduction.bms  dependent_static_assert.bms  if_expression.bms  loop.bms  return_variable.bms  static_assert.bms  void.bms
test/analysis_error/: assigning_const.bms  assigning_parameter.bms  assignment_of_undefined_variable.bms  bool_arithmetic.bms  bool_bitwise.bms  bool_relational_comparison.bms  break_outside_loop.bms  call_non_function.bms  call_to_undefined_function.bms  codegen_call_to_unanalyzed.bms  condition_not_bool.bms  continue_outside_loop.bms  empty_return_in_non_void_function.bms  execution_limit_exceeded.bms  failed_to_define_function.bms  failed_to_define_parameter.bms  failed_to_define_variable.bms  function_in_expression.bms  incompatible_types.bms  incompatible_widths.bms  invalid_integer_literal.bms  let_variable_in_constant_expression.bms  parameter_in_constant_expression.bms  reference_to_undefined_variable.bms  requires_clause_not_bool.bms  requires_clause_not_satisfied.bms  static_assert_expression_not_bool.bms  unreachable_code.bms  use_of_undefined_constant.bms  use_of_undefined_variable.bms  void_operation.bms  width_deduction_from_non_uint.bms  width_not_const.bms  width_not_integer.bms  width_too_large.bms  wrong_number_of_arguments.bms
test/bmd/: hello_code.bmd  hello_directive.bmd  hello_paragraph.bmd
test/dependencies/: constant_direct.bms  constant_recursive.bms  direct_recursion.bms  gathering_many.bms  mutual_recursion.bms  mutual_recursion_3.bms  none.bms
test/evaluation_error/: unreachable.bms
test/parse_error/: let_let.bms  let_no_type_no_init.bms  nameless_function.bms  unbalanced_parentheses.bms  unclosed_annotation.bms
test/syntax/: all_tokens.bms  annotated_everything.bms  annotated_function_calls.bms  annotated_loop.bms  annotation_with_arguments.bms  empty_function_void.bms  function_return_zero.bms  global_const.bms  tokenize_regression.bms
test/tokenize/: illegal_char.bms  integer_suffix.bms  unterminated_comment.bms
test/tokenize_error/: integer_suffix.bms
test/type_error/: int_bitwise.bms  non_bool_logical.bms
test/valid_bms/: assert.bms  identity.bms  implicit_return_type.bms  uint128.bms  uint_pow2.bms
www/: live_edit.html
www/css/: code.css  live_edit.css  main.css
www/js/: live_edit.js  live_edit_core.js
(+60 files in other folders)
